--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}Enfold_chat</title>
+    <title>{% block title %}{% endblock %}Communitea Chat</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -41,7 +41,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
             </svg>
             <a href="/" class="text-xl font-semibold text-white hover:text-enfold-teal-100 transition duration-300">
-                Enfold_chat
+                Communitea Chat
             </a>
         </div>
 
